hphp/hack/test/typecheck/readonly/collection_literal.php.exp
File "collection_literal.php", line 25, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "collection_literal.php", line 27, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "collection_literal.php", line 31, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "collection_literal.php", line 33, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "collection_literal.php", line 38, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "collection_literal.php", line 40, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
